# tbase-extractor

./: .env  .env.example  .flake8  .gitignore  .pre-commit-config.yaml  ISSUE_RESOLUTION_SUMMARY.md  LICENSE  Makefile  OPTION3_INTEGRATION_SUMMARY.md  README.md  SECURITY_IMPROVEMENTS.md  example_patient_ids.csv  main.py  pyproject.toml  requirements.txt  sql_interface.py  test_dynamic_complete.py  test_dynamic_runtime_generation.py  test_edge_cases.py  test_non_optimized_format.py  test_option3_complete.py  test_option3_integration.py  test_results_output.txt  validate_option3_integration.py
sql_interface/: __init__.py  db_interface.py  exceptions.py  output_formatter.py  query_manager.py
sql_templates/: get_patient_by_id.sql  get_patient_by_name_dob.sql  list_tables.sql
tbase_extractor/: __init__.py  __main__.py  config.py  main.py  main.py.bak  metadata.py  output_handler.py  secure_logging.py  temp_handle_output.py  utils.py
tbase_extractor/matching/: __init__.py  fuzzy_matchers.py  models.py  search_strategy.py
tbase_extractor/sql_interface/: __init__.py  db_interface.py  dynamic_query_builder.py  dynamic_query_manager.py  exceptions.py  flexible_query_builder.py  output_formatter.py  output_formatter.py.bak  query_manager.py
tbase_extractor/sql_templates/: README.md  get_all_patients.sql  get_patient_base_fields.sql  get_patient_by_id.sql  get_patient_by_name_dob.sql  get_patient_diagnoses_by_id.sql  get_patients_by_dob_year_range.sql  get_patients_by_lastname_like.sql  get_patients_diagnoses_by_dob_year_range.sql  get_patients_diagnoses_by_lastname_like.sql  get_table_columns.sql  list_tables.sql
tests/: conftest.py
tests/unit/: test_config.py  test_utils.py
tests/unit/matching/: test_fuzzy_matchers.py  test_models.py
tests/unit/sql_interface/: __init__.py  test_db_interface.py  test_exceptions.py  test_output_formatter.py  test_query_manager.py
