[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tbase-extractor"
version = "0.1.0"
description = "A CLI tool for extracting and listing SQL Server table metadata."
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
license = "MIT"
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
    "pyodbc",
    "python-dotenv",
    "tabulate",
    "beautifulsoup4",
    "rapidfuzz"
]

[tool.setuptools]
include-package-data = true
package-dir = {"" = "."}

[tool.setuptools.packages.find]
include = ["tbase_extractor*"]

[tool.setuptools.package-data]
"tbase_extractor" = ["sql_templates/*.sql"]
